gcc-14.2.0/gcc/testsuite/gdc.test/compilable/extra-files/pkgDIP37_10354/package.d
version https://git-lfs.github.com/spec/v1
oid sha256:67348012e71f28f1b3a1c65687a78d300ea40344d28803ebf4a9ad77c6656219
size 93
